traefik-with-kubernetes-gateway-api/providers/kubernetes-gateway-api/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GatewayClass

metadata:
    name: default-gatewayclass
    namespace: default

spec:
    controllerName: traefik.io/gateway-controller
