traefik-with-kubernetes-gateway-api/providers/kubernetes-gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway

metadata:
    name: default-gateway
    namespace: default

spec:
    gatewayClassName: default-gatewayclass
    listeners:
        - protocol: HTTP
          port: 8000
          name: web
          allowedRoutes:
              namespaces:
                  from: All
