traefik-with-kubernetes-gateway-api/providers/kubernetes-gateway-api/traefik-dashboard.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute

metadata:
    name: traefik-dashboard-httproute
    namespace: traefik

spec:
    parentRefs:
        - name: traefik-gateway
          sectionName: web

    hostnames:
        - dashboard.traefik.127.0.0.1.nip.io

    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /

          backendRefs:
              - name: traefik-dashboard
                port: 9000
                weight: 1
                namespace: traefik
