traefik-with-kubernetes-gateway-api/providers/kubernetes-gateway-api/whoami.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute

metadata:
    name: whoami-httproute
    namespace: default

spec:
    parentRefs:
        - name: default-gateway
          sectionName: web

    hostnames:
        - whoami.127.0.0.1.nip.io

    rules:
        - matches:
              - path:
                    type: Exact
                    value: /

          backendRefs:
              - name: whoami-service
                port: 80
                weight: 1
                namespace: default
